--- a/packer/http/ks.cfg
+++ b/packer/http/ks.cfg
@@ -5,20 +5,25 @@
 
 eula --agreed
 
+
 lang en_US.UTF-8
 
 keyboard us
 
 timezone UTC+3
 
+
+
 network --bootproto=dhcp --device=link --activate
 
 network --hostname=otus-c8
+
 
 rootpw vagrant
 authconfig --enableshadow --passalgo=sha512
 
 user --groups=wheel --name=vagrant --password=vagrant --gecos="vagrant"
+
 
 selinux --enforcing
 
@@ -26,9 +31,13 @@ firewall --disabled
 
 firstboot --disable
 
+
+
+
 text
 
 url --url="http://mirror.centos.org/centos/8-stream/BaseOS/x86_64/os/"
+
 
 bootloader --location=mbr --append="ipv6.disable=1 crashkernel=auto"
 
@@ -39,5 +48,31 @@ clearpart --all --initlabel
 
 autopart --type=lvm
 
-reboot
+%post --log=/root/post_install.log
 
+# Add vagrant to sudoers
+cat > /etc/sudoers.d/vagrant << EOF_sudoers_vagrant
+vagrant        ALL=(ALL)       NOPASSWD: ALL
+EOF_sudoers_vagrant
+
+/bin/chmod 0440 /etc/sudoers.d/vagrant
+/bin/sed -i "s/^.*requiretty/#Defaults requiretty/" /etc/sudoers
+
+# Fix sshd config for CentOS 7 1611 (reboot issue)
+cat << EOF_sshd_config >> /etc/ssh/sshd_config
+
+TCPKeepAlive yes
+ClientAliveInterval 0
+ClientAliveCountMax 3
+
+UseDNS no
+UsePAM no
+GSSAPIAuthentication no
+ChallengeResponseAuthentication no
+
+EOF_sshd_config
+
+%end
+
+
+reboot
