--- a/packer/http/ks.cfg
+++ b/packer/http/ks.cfg
@@ -58,7 +58,7 @@ EOF_sudoers_vagrant
 /bin/chmod 0440 /etc/sudoers.d/vagrant
 /bin/sed -i "s/^.*requiretty/#Defaults requiretty/" /etc/sudoers
 
-# Fix sshd config for CentOS 7 1611 (reboot issue)
+# Fix sshd config for CentOS
 cat << EOF_sshd_config >> /etc/ssh/sshd_config
 
 TCPKeepAlive yes
